--- a/src/translations/locale-es.json
+++ b/src/translations/locale-es.json
@@ -1,8 +1,13 @@
 {
-  "GENERAL":{
-    "BTNS_LANGUAGES": "Sprache",
+  "GENERAL": {
+    "MENU":"MENÚ",
+    "BTNS": {
+       "LANGUAGES": "LENGUAJE"
+    }
   },
-  "PERSONAL_INFO": {
-    "INTRO": "Hallo!"
+  "HOME":{
+  	"INFO":{
+  		"TITLE": "¡BIENVENIDO!"
+  	}
   }
 }
