Added social icons, menu items and translations, added work view and state

--- a/src/translations/locale-de.json
+++ b/src/translations/locale-de.json
@@ -1,8 +1,17 @@
 {
   "GENERAL": {
-    "MENU":"MENU",
+    "MENU": "MENU",
+    "MENUITEMS": {
+      "HOME": "HOME",
+      "ABOUT": "ÜBER MICH",
+      "EDUCATION": "AUSBILDUNG",
+      "EXPERIENCE": "ARBEITSERFAHRUNG",
+      "PROJECTS": "PROJEKTE",
+      "SKILLS": "FÄHIGKEITEN",
+      "CONTACT": "KONTAKT"
+    },
     "BTNS": {
-       "LANGUAGES": "SPRACHE"
+      "LANGUAGES": "SPRACHE"
     }
   },
   "HOME":{
