Added some functionallity to home view

--- a/src/translations/locale-en.json
+++ b/src/translations/locale-en.json
@@ -1,6 +1,6 @@
 {
   "general": {
-    "menu": "Menu",
+    "menuTitle": "Menu",
     "menuitems": {
       "home": "Home",
       "about": "About me",
@@ -11,14 +11,16 @@
       "contact": "Contact"
     },
     "btns": {
-      "languages": "Language"
+      "languages": "Language",
+      "menuHome": "Know me!"
     }
   },
   "home": {
     "info": {
       "title": "ALFREDO CASTAÑEDA SIERRA",
       "subTitle": "Web Developer",
-      "summary": "I am a full-time web apps developer, with great passion about new \n technologies, especially those connected to web applications development and the healthcare industry."
+      "summary1": "I am a full-time web apps developer, with great passion about new \n technologies, especially those connected to web applications development and the healthcare industry.",
+      "summary2": "Navigate through this website to learn more about me, my experience and some of the projects I have been part of."
     }
   }
 }
