Added about me view

--- a/src/translations/locale-de.json
+++ b/src/translations/locale-de.json
@@ -19,8 +19,8 @@
     "info":{
       "title": "ALFREDO CASTAÑEDA SIERRA",
       "subTitle": "Web Entwrinkler",
-      "summary1": "I am a full-time web apps developer, with great passion about new \n technologies, especially those connected to web applications development and the healthcare industry.",
-      "summary2": "Navigate through this website to learn more about me, my experience and some of the projects I have been part of."
+      "summary1": "Ich bin ein Web-Applikationen Programmierer mit großer Leidenschaft über neue Technologien, <br> insbesondere im Zusammenhang mit der Entwicklung und Gesundheitsindustrie .",
+      "summary2": "Blättern Sie durch meine Seite zu erfahren Sie mehr über mich, meine Fähigkeiten, meine Arbeit und <br> die Projekte, die teilgenommen haben."
     }
   }
 }
