--- a/src/translations/locale-en.json
+++ b/src/translations/locale-en.json
@@ -19,8 +19,8 @@
     "info": {
       "title": "ALFREDO CASTAÑEDA SIERRA",
       "subTitle": "Web Developer",
-      "summary1": "I am a full-time web apps developer, with great passion about new \n technologies, especially those connected to web applications development and the healthcare industry.",
-      "summary2": "Navigate through this website to learn more about me, my experience and some of the projects I have been part of."
+      "summary1": "I am a full-time web apps developer, with great passion about new technologies, especially <br> those connected to web applications development and the healthcare industry.",
+      "summary2": "Navigate through this website to learn more about me, mysklls, <br> my work experience and some of the projects I have been part of."
     }
   }
 }
